apps/loki/templates/loki-vs.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: loki-vs
  namespace: monitoring
spec:
  hosts:
  - "loki.internal"
  - "loki.jiun2-internal.net"
  gateways:
  - istio-system/internal-gateway
  http:
  - route:
    - destination:
        host: loki.monitoring.svc.cluster.local
        port:
          number: 3100
